--- a/Frugl/Frugl/Views/Calendar/Calendar.storyboard
+++ b/Frugl/Frugl/Views/Calendar/Calendar.storyboard
@@ -93,7 +93,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fWM-tF-c5M">
                                 <rect key="frame" x="0.0" y="162.66666666666666" width="393" height="269.33333333333337"/>
                                 <color key="backgroundColor" red="0.87409847969999999" green="0.88963216540000001" blue="0.96484857800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.5" minimumInteritemSpacing="0.5" id="j1n-0O-Fg2">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="0.5" minimumInteritemSpacing="0.5" id="j1n-0O-Fg2">
                                     <size key="itemSize" width="50" height="40"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
